[minor] Add Support for RDS DB2 provisioning using IaC Automation (#2024)

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.tf.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-main.tf.j2
@@ -1,4 +1,4 @@
-{%- if (IS_EFS | lower == 'true') or (IS_MSK | lower == 'true') -%}
+{%- if (IS_EFS | lower == 'true') or (IS_MSK | lower == 'true') or (IS_RDS | lower == 'true') -%}
 data "aws_subnets" "external_subnets" {
   filter {
     name   = "vpc-id"
@@ -24,7 +24,106 @@ data "aws_subnets" "internal_subnets" {
 
 
 locals {
-{%- if IS_S3 | lower == 'true' %}
+{%- if (IS_S3 | lower == 'true') or (IS_RDS | lower == 'true') %}
+{%- if (RDS_MANAGE | lower == 'true') %}
+  #RDS Manage specific IAM parameter starts here
+  iam_user_arns_audit_log_manage = {
+    audit_logs   = "${var.iam_user_arn_prefix_audit_log}-auditlog-manage"
+  }
+
+  s3_iam_users_list_audit_log_manage = {
+    audit_logs = {
+      bucket_name   = "${var.s3bucket_name_prefix_db2}-auditlog-manage"
+      iam_user_name = "${var.iam_user_name_prefix_audit_log}-auditlog-manage"
+      access_level  = var.access_level_audit_log_rw
+    }
+  }
+
+  iam_users_by_bucket_audit_log_manage = {
+    for bucket_name in distinct([for u in local.s3_iam_users_list_audit_log_manage : u.bucket_name]) :
+    bucket_name => [
+      for u_key, u_info in local.s3_iam_users_list_audit_log_manage :
+      local.iam_user_arns_audit_log_manage[u_key]
+      if u_info.bucket_name == bucket_name
+    ]
+  }
+
+  bucket_user_names_audit_log_manage = {
+    audit_logs   = "${var.iam_user_name_prefix_audit_log}-auditlog-manage"
+  }
+
+  bucket_user_name_map_audit_log_manage = {
+    for key, value in local.s3_iam_users_list_audit_log_manage :
+    key => lookup(local.bucket_user_names_audit_log_manage, key, null)
+  }
+  #RDS Manage specific IAM parameter ends here
+{%- endif %}
+{%- if (RDS_IOT | lower == 'true') %}
+  #RDS IOT specific IAM parameter starts here
+  iam_user_arns_audit_log_iot = {
+    audit_logs   = "${var.iam_user_arn_prefix_audit_log}-auditlog-iot"
+  }
+
+  s3_iam_users_list_audit_log_iot = {
+    audit_logs = {
+      bucket_name   = "${var.s3bucket_name_prefix_db2}-auditlog-iot"
+      iam_user_name = "${var.iam_user_name_prefix_audit_log}-auditlog-iot"
+      access_level  = var.access_level_audit_log_rw
+    }
+  }
+
+  iam_users_by_bucket_audit_log_iot = {
+    for bucket_name in distinct([for u in local.s3_iam_users_list_audit_log_iot : u.bucket_name]) :
+    bucket_name => [
+      for u_key, u_info in local.s3_iam_users_list_audit_log_iot :
+      local.iam_user_arns_audit_log_iot[u_key]
+      if u_info.bucket_name == bucket_name
+    ]
+  }
+
+  bucket_user_names_audit_log_iot = {
+    audit_logs   = "${var.iam_user_name_prefix_audit_log}-auditlog-iot"
+  }
+
+  bucket_user_name_map_audit_log_iot = {
+    for key, value in local.s3_iam_users_list_audit_log_iot :
+    key => lookup(local.bucket_user_names_audit_log_iot, key, null)
+  }
+  #RDS IOT specific IAM parameter ends here
+{%- endif %}
+{%- if (RDS_FACILITIES | lower == 'true') %}
+  #RDS FACILITIES specific IAM parameter starts here
+  iam_user_arns_audit_log_facilities = {
+    audit_logs   = "${var.iam_user_arn_prefix_audit_log}-auditlog-facilities"
+  }
+
+  s3_iam_users_list_audit_log_facilities = {
+    audit_logs = {
+      bucket_name   = "${var.s3bucket_name_prefix_db2}-auditlog-facilities"
+      iam_user_name = "${var.iam_user_name_prefix_audit_log}-auditlog-facilities"
+      access_level  = var.access_level_audit_log_rw
+    }
+  }
+
+  iam_users_by_bucket_audit_log_facilities = {
+    for bucket_name in distinct([for u in local.s3_iam_users_list_audit_log_facilities : u.bucket_name]) :
+    bucket_name => [
+      for u_key, u_info in local.s3_iam_users_list_audit_log_facilities :
+      local.iam_user_arns_audit_log_facilities[u_key]
+      if u_info.bucket_name == bucket_name
+    ]
+  }
+
+  bucket_user_names_audit_log_facilities = {
+    audit_logs   = "${var.iam_user_name_prefix_audit_log}-auditlog-facilities"
+  }
+
+  bucket_user_name_map_audit_log_facilities = {
+    for key, value in local.s3_iam_users_list_audit_log_facilities :
+    key => lookup(local.bucket_user_names_audit_log_facilities, key, null)
+  }
+  #RDS FACILITIES specific IAM parameter ends here
+{%- endif %}
 {%- if S3_MANAGE | lower == 'true'  %}
   #Manage related params for S3 starts
   iam_user_arns_manage = {
@@ -80,20 +179,28 @@ locals {
   #Manage related params for S3 ends
 {%- endif %}
 
-  #Common S3 params starts
+  #S3 Actions params starts
   s3_actions = {
     ro = ["s3:GetObject", "s3:ListBucket"]
     rw = ["s3:GetObject", "s3:PutObject", "s3:DeleteObject", "s3:ListBucket"]
   }
-
+  #S3 Actions params ends
+{%- endif %}
+{%- if (IS_RDS | lower == 'true') %}
+  #RDS AUDIT LOG S3 Actions params starts
+  s3_actions_audit_log = {
+      rw = ["s3:GetObject", "s3:PutObject", "s3:DeleteObject", "s3:ListBucket", "s3:ListMultipartUploadParts", "s3:AbortMultipartUpload"]
+  }
+  #RDS AUDIT LOG S3 Actions params ends
+{%- endif %}
+{%- if (IS_S3 | lower == 'true') or (IS_RDS | lower == 'true') %}
   location = var.location
-  #Common S3 params ends
 {%- endif %}
   cluster = {
-  {%- if IS_S3 | lower == 'true' %}
+  {%- if (IS_S3 | lower == 'true') or (IS_RDS | lower == 'true') %}
     instance = {
       name = var.instance_name
-      {%- if S3_MANAGE | lower == 'true'  %}
+   {%- if S3_MANAGE | lower == 'true'  %}
     #Manage specific S3 buckets starts
       manage_s3buckets = {
         doclinks = {
@@ -137,19 +244,92 @@ locals {
       }
     #Manage specific S3 buckets ends
     {%- endif %}
+    {%- if (IS_RDS | lower == 'true') %}
+    {%- if (RDS_MANAGE | lower == 'true') %}
+    #RDS Manage specific S3 bucket start
+    rds_s3bucket_manage = {
+        auditlog-manage = {
+          name_prefix          = var.name_prefix
+          create               = var.create_bucket
+          name                 = "${var.s3bucket_name_prefix_db2}-auditlog-manage"
+          id                   = "${var.s3bucket_name_prefix_db2}-auditlog-manage"
+          access_level         = "rw"
+          s3_bucket_arn        = "arn:aws:s3:::${var.s3bucket_name_prefix_db2}-auditlog-manage"
+          secret_suffix        = "manage"
+          cos_secret_format    = false
+          manage_secret_format = false
+          expiration = {
+            days = 366 // how long to keep logs
+          }
+        }
     }
-    name = var.cluster_name
+    #RDS Manage specific S3 bucket end
     {%- endif %}
-  {%- if (IS_EFS | lower == 'true') or (IS_MSK | lower == 'true') %}
-    #EFS/MSK related params starts
+    {%- if (RDS_FACILITIES | lower == 'true') %}
+    #RDS FACILITIES specific S3 bucket start
+    rds_s3bucket_facilities = {
+        auditlog-facilities = {
+          name_prefix          = var.name_prefix
+          create               = var.create_bucket
+          name                 = "${var.s3bucket_name_prefix_db2}-auditlog-facilities"
+          id                   = "${var.s3bucket_name_prefix_db2}-auditlog-facilities"
+          access_level         = "rw"
+          s3_bucket_arn        = "arn:aws:s3:::${var.s3bucket_name_prefix_db2}-auditlog-facilities"
+          secret_suffix        = "facilities"
+          cos_secret_format    = false
+          manage_secret_format = false
+          expiration = {
+            days = 366 // how long to keep logs
+          }
+        }
+    }
+    #RDS FACILITIES specific S3 bucket end
+    {%- endif %}
+    {%- if (RDS_IOT | lower == 'true') %}
+    #RDS IOT specific S3 bucket start
+    rds_s3bucket_iot = {
+        auditlog-iot = {
+          name_prefix          = var.name_prefix
+          create               = var.create_bucket
+          name                 = "${var.s3bucket_name_prefix_db2}-auditlog-iot"
+          id                   = "${var.s3bucket_name_prefix_db2}-auditlog-iot"
+          access_level         = "rw"
+          s3_bucket_arn        = "arn:aws:s3:::${var.s3bucket_name_prefix_db2}-auditlog-iot"
+          secret_suffix        = "iot"
+          cos_secret_format    = false
+          manage_secret_format = false
+          expiration = {
+            days = 366 // how long to keep logs
+          }
+        }
+    }
+    #RDS IOT specific S3 bucket end
+   {%- endif %}
+   {%- endif %}
+    }
+
+   {%- endif %}
+  {%- if (IS_S3 | lower == 'true') or (IS_RDS | lower == 'true') %}
+    name = var.cluster_name
+  {%- endif %}
+  {%- if (IS_RDS | lower == 'true') %}
+  #RDS related params starts
+    cidrs = {
+      workload_external = {{ CLUSTER_CIDR_WORKLOAD_EXTERNAL }}
+      workload_internal = {{ CLUSTER_CIDR_WORKLOAD_INTERNAL }}
+    }
+    #RDS related params ends
+  {%- endif %}
+  {%- if (IS_EFS | lower == 'true') or (IS_MSK | lower == 'true') or (IS_RDS | lower == 'true') %}
+    #EFS/MSK/RDS related params starts
     "external_subnet_ids" : data.aws_subnets.external_subnets.ids
     "internal_subnet_ids" : data.aws_subnets.internal_subnets.ids
-    #EFS/MSK related params ends
+    #EFS/MSK/RDS related params ends
   {%- endif %}
-  {%- if IS_MSK | lower == 'true' %}
-    #MSK related params starts
+  {%- if (IS_MSK | lower == 'true') or (IS_RDS | lower == 'true') %}
+    #MSK/RDS related params starts
     "security_groups" : ["{{ SECURITY_GROUPS_VALUE }}"]
-    #MSK related params ends
+    #MSK/RDS related params ends
   {%- endif %}
   }
 
@@ -157,13 +337,15 @@ locals {
  {%- if IS_EFS | lower == 'true' %}
   #EFS config related params starts
   multiple-efs = {
-{%- if EFS_MANAGE == "true" %}
+{%- if EFS_MANAGE_DB2 == "true" %}
     manage-db2 = {
       name = join("-", ["efs", var.cluster_name, var.instance_name, "manage-db2"])
       performance_mode = "{{EFS_MANAGE_DB2_PERFORMANCE_MODE}}"
       throughput_mode = "{{EFS_MANAGE_DB2_THROUGHPUT_MODE}}"
       efs_mount_count = {{EFS_MANAGE_DB2_MOUNT_COUNT}}
     }
+{%- endif %}
+{%- if EFS_MANAGE_MAIN == "true" %}
     manage-main = {
       name = join("-", ["efs", var.cluster_name, var.instance_name, "manage-main"])
       performance_mode = "{{EFS_MANAGE_MAIN_PERFORMANCE_MODE}}"
@@ -171,7 +353,7 @@ locals {
       efs_mount_count = {{EFS_MANAGE_MAIN_MOUNT_COUNT}}
     }
 {%- endif %}
-{%- if EFS_IOT == "true" %}
+{%- if EFS_IOT_DB2 == "true" %}
     iot-db2 = {
       name = join("-", ["efs", var.cluster_name, var.instance_name, "iot-db2"])
       performance_mode = "{{EFS_IOT_DB2_PERFORMANCE_MODE}}"
@@ -179,7 +361,7 @@ locals {
       efs_mount_count = {{EFS_IOT_DB2_MOUNT_COUNT}}
     }
 {%- endif %}
-{%- if EFS_VISUALINSPECTION == "true" %}
+{%- if EFS_VISUALINSPECTION_MAIN == "true" %}
     visualinspection-main = {
       name = join("-", ["efs", var.cluster_name, var.instance_name, "visualinspection-main"])
       performance_mode = "{{EFS_VISUALINSPECTION_MAIN_PERFORMANCE_MODE}}"
@@ -187,13 +369,15 @@ locals {
       efs_mount_count = {{EFS_VISUALINSPECTION_MAIN_MOUNT_COUNT}}
     }
 {%- endif %}
-{%- if EFS_FACILITIES == "true" %}
+{%- if EFS_FACILITIES_DB2 == "true" %}
     facilities-db2 = {
       name = join("-", ["efs", var.cluster_name, var.instance_name, "facilities-db2"])
       performance_mode = "{{EFS_FACILITIES_DB2_PERFORMANCE_MODE}}"
       throughput_mode = "{{EFS_FACILITIES_DB2_THROUGHPUT_MODE}}"
       efs_mount_count = {{EFS_FACILITIES_DB2_MOUNT_COUNT}}
     }
+{%- endif %}
+{%- if EFS_FACILITIES_MAIN == "true" %}
     facilities-main = {
       name = join("-", ["efs", var.cluster_name, var.instance_name, "facilities-main"])
       performance_mode = "{{EFS_FACILITIES_MAIN_PERFORMANCE_MODE}}"
