--- a/tekton/src/pipelines/mas-backup.yml.j2
+++ b/tekton/src/pipelines/mas-backup.yml.j2
@@ -64,8 +64,6 @@ spec:
       params:
         {{ lookup('template', pipeline_src_dir ~ '/taskdefs/common/cli-params.yml.j2') | indent(8) }}
 
-        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/backup-restore/backup-params.yml.j2') | indent(8) }}
-
         - name: devops_suite_name
           value: backup-ibm-catalogs
 
@@ -95,8 +93,6 @@ spec:
       params:
         {{ lookup('template', pipeline_src_dir ~ '/taskdefs/common/cli-params.yml.j2') | indent(8) }}
 
-        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/backup-restore/backup-params.yml.j2') | indent(8) }}
-
         - name: devops_suite_name
           value: backup-cert-manager
 
@@ -123,8 +119,6 @@ spec:
       timeout: "0"
       params:
         {{ lookup('template', pipeline_src_dir ~ '/taskdefs/common/cli-params.yml.j2') | indent(8) }}
-
-        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/backup-restore/backup-params.yml.j2') | indent(8) }}
 
         - name: devops_suite_name
           value: backup-mongodb
@@ -162,8 +156,6 @@ spec:
       params:
         {{ lookup('template', pipeline_src_dir ~ '/taskdefs/common/cli-params.yml.j2') | indent(8) }}
 
-        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/backup-restore/backup-params.yml.j2') | indent(8) }}
-
         - name: mas_instance_id
           value: $(params.mas_instance_id)
 
@@ -200,8 +192,6 @@ spec:
       timeout: "0"
       params:
         {{ lookup('template', pipeline_src_dir ~ '/taskdefs/common/cli-params.yml.j2') | indent(8) }}
-
-        {{ lookup('template', pipeline_src_dir ~ '/taskdefs/backup-restore/backup-params.yml.j2') | indent(8) }}
 
         - name: mas_instance_id
           value: $(params.mas_instance_id)
@@ -249,7 +239,7 @@ spec:
 
         # Backup specific parameters
         - name: db2_backup_version
-          value: $(params.db2_backup_version)
+          value: $(params.backup_version)
         - name: backup_type
           value: $(params.backup_type)
         - name: backup_vendor
@@ -295,7 +285,7 @@ spec:
         - name: mas_backup_dir
           value: /workspace/backups
         - name: mas_app_backup_version
-          value: $(params.mas_app_backup_version)
+          value: $(params.backup_version)
 
       taskRef:
         kind: Task
