[minor] Allow DRO to be exposed through a route in gitops (#1995)

--- a/tekton/src/pipelines/gitops/gitops-mas-cluster.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-cluster.yml.j2
@@ -63,6 +63,12 @@ spec:
     - name: imo_install_plan
       type: string
       default: "Automatic"
+    - name: dro_public_domain
+      type: string
+      default: ""
+    - name: dro_cis_crn
+      type: string
+      default: ""
 
     - name: nvidia_gpu_action
       type: string
@@ -426,6 +432,10 @@ spec:
           value: $(params.dro_install_plan)
         - name: imo_install_plan
           value: $(params.imo_install_plan)
+        - name: dro_public_domain
+          value: $(params.dro_public_domain)
+        - name: dro_cis_crn
+          value: $(params.dro_cis_crn)
       taskRef:
         kind: Task
         name: gitops-dro
