--- a/tekton/src/tasks/gitops/gitops-dro.yml.j2
+++ b/tekton/src/tasks/gitops/gitops-dro.yml.j2
@@ -41,6 +41,12 @@ spec:
     - name: imo_install_plan
       type: string
       default: "Automatic"
+    - name: dro_public_domain
+      type: string
+      default: ""
+    - name: dro_cis_crn
+      type: string
+      default: ""
   stepTemplate:
     name: gitops-dro
     env:
@@ -74,6 +80,10 @@ spec:
         value: $(params.dro_install_plan)
       - name: IMO_INSTALL_PLAN
         value: $(params.imo_install_plan)
+      - name: DRO_PUBLIC_DOMAIN
+        value: $(params.dro_public_domain)
+      - name: DRO_CIS_CRN
+        value: $(params.dro_cis_crn)
     envFrom:
       - configMapRef:
           name: environment-properties
