[patch] mobile-api-location tests

--- a/tekton/src/pipelines/taskdefs/fvt-mobile/pytest/phase3-apps.yml.j2
+++ b/tekton/src/pipelines/taskdefs/fvt-mobile/pytest/phase3-apps.yml.j2
@@ -19,3 +19,14 @@
     - mobile-pytest-assetmanager
     - mobile-pytest-tech
     - mobile-pytest-supervisor
+
+- name: mobile-pytest-location
+  {{ lookup('template', 'taskdefs/fvt-mobile/common/taskref-pytest.yml.j2') | indent(2) }}
+  params:
+    {{ lookup('template', 'taskdefs/fvt-mobile/common/params-pytest.yml.j2') | indent(4) }}
+    - name: fvt_test_suite
+      value: mobile-api-location
+  runAfter:
+    - mobile-pytest-assetmanager
+    - mobile-pytest-tech
+    - mobile-pytest-supervisor
