set correct db2_backup_type env var

--- a/tekton/src/tasks/dependencies/db2.yml.j2
+++ b/tekton/src/tasks/dependencies/db2.yml.j2
@@ -320,7 +320,7 @@ spec:
         value: /workspace/backups
       - name: DB2_BACKUP_VERSION
         value: $(params.db2_backup_version)
-      - name: BACKUP_TYPE
+      - name: DB2_BACKUP_TYPE
         value: $(params.backup_type)
       - name: BACKUP_VENDOR
         value: $(params.backup_vendor)
