[patch] remove default for provisioner storage class

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/mas-provisioner.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/mas-provisioner.yaml.j2
@@ -6,7 +6,6 @@ mas_provisioner:
   provisioner_domain: "{{ PROVISIONER_DOMAIN }}"
   provisioner_namespace: {{ PROVISIONER_NAMESPACE }}
   provisioner_version: {{ PROVISIONER_VERSION }}
-  storage_class: {{ PROVISIONER_STORAGE_CLASS }}
   enable_mtls: {{ ENABLE_MTLS }}
   service_port: {{ SERVICE_PORT }}
   status_repo_url: {{ STATUS_REPO_URL }}
@@ -17,6 +16,9 @@ mas_provisioner:
   enable_pd_alert: {{ ENABLE_PD_ALERT }}
   enable_ocm_alert: {{ ENABLE_OCM_ALERT }}
   github_token: "<path:{{ SECRETS_PATH }}:{{ SECRET_KEY_GITHUB_TOKEN }}>"
+  {% if PROVISIONER_STORAGE_CLASS is defined and PROVISIONER_STORAGE_CLASS != "" %}
+  storage_class: {{ PROVISIONER_STORAGE_CLASS }}
+  {% endif %}
   {% if GIT_ROOT_CA_CERTIFICATE is defined and GIT_ROOT_CA_CERTIFICATE != "" %}
   git_root_ca: {{ GIT_ROOT_CA_CERTIFICATE }}
   {% endif %}
