--- a/tekton/src/pipelines/gitops/gitops-mas-cluster.yml.j2
+++ b/tekton/src/pipelines/gitops/gitops-mas-cluster.yml.j2
@@ -259,7 +259,7 @@ spec:
       default: 'false'
     - name: provisioner_storage_class
       type: string
-      default: 'ocs-storagecluster-cephfs'
+      default: ''
     - name: provisioner_instana_url_prefix
       type: string
       default: ''
