Add mas app id to rds template

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/db2-databases/ibm-dbs-rds-databases.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/db2-databases/ibm-dbs-rds-databases.yaml.j2
@@ -1,4 +1,5 @@
 db2_namespace: {{ DB2_NAMESPACE }}
+mas_application_id: {{ MAS_APP_ID }}
 db2_instance_name: {{ DB2_INSTANCE_NAME }}
 host: <path:{{ SECRETS_PATH }}:{{ HOST }}>
 port: <path:{{ SECRETS_PATH }}:{{ PORT }}>
