update db2 backup order

--- a/tekton/src/pipelines/mas-backup.yml.j2
+++ b/tekton/src/pipelines/mas-backup.yml.j2
@@ -262,7 +262,7 @@ spec:
         - name: backups
           workspace: shared-backups
       runAfter:
-        - suite-backup
+        - pre-backup-check
 
     # 9. Backup Manage Application - Optional
     # -------------------------------------------------------------------------
