[patch] Replace ODH with RHOAI - New Install (#2027)

--- a/tekton/src/pipelines/taskdefs/aiservice/aiservice.yml.j2
+++ b/tekton/src/pipelines/taskdefs/aiservice/aiservice.yml.j2
@@ -87,6 +87,9 @@
     - name: environment_type
       value: $(params.environment_type)
 
+    # RHOAI flag
+    - name: rhoai
+      value: $(params.rhoai)
     - name: aiservice_certificate_issuer
       value: $(params.aiservice_certificate_issuer)
 
