--- a/tekton/src/tasks/aiservice/aiservice.yml.j2
+++ b/tekton/src/tasks/aiservice/aiservice.yml.j2
@@ -152,6 +152,8 @@ spec:
     - name: rsl_token
       type: string
 
+    # RHOAI flag
+    - name: rhoai
     # Certificate Issuer
     - name: aiservice_certificate_issuer
       type: string
