--- a/tekton/src/pipelines/mas-backup.yml.j2
+++ b/tekton/src/pipelines/mas-backup.yml.j2
@@ -231,9 +231,9 @@ spec:
           value: $(params.mas_instance_id)
 
         - name: db2_namespace
-          value: $(params.db2_namespace)
+          value: $(params.manage_db2_namespace)
         - name: db2_instance_name
-          value: $(params.db2_instance_name)
+          value: $(params.manage_db2_instance_name)
         - name: db2_action
           value: backup
 
@@ -241,9 +241,9 @@ spec:
         - name: db2_backup_version
           value: $(params.backup_version)
         - name: backup_type
-          value: $(params.backup_type)
+          value: $(params.manage_db2_backup_type)
         - name: backup_vendor
-          value: $(params.backup_vendor)
+          value: $(params.manage_db2_backup_vendor)
         - name: backup_s3_endpoint
           value: $(params.backup_s3_endpoint)
         - name: backup_s3_bucket
@@ -278,9 +278,9 @@ spec:
         - name: mas_instance_id
           value: $(params.mas_instance_id)
         - name: mas_workspace_id
-          value: $(params.mas_workspace_id)
+          value: $(params.manage_workspace_id)
         - name: mas_app_id
-          value: $(params.mas_app_id)
+          value: manage
 
         - name: mas_backup_dir
           value: /workspace/backups
