--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-terraformtfvars.tf.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-terraformtfvars.tf.j2
@@ -50,6 +50,18 @@ s3_iam_users_list_manage = {
 }
 #S3 Manage related params ends
 {%- endif %}
+{%- if S3_MVI | lower == 'true'  %}
+#S3 MVI related params starts
+s3bucket_name_prefix_mvi    = "massaas-cos-{{MAS_INSTANCE_ID}}-{{CLUSTER_ID}}"
+iam_user_name_prefix_mvi = "massaas-cos-{{MAS_INSTANCE_ID}}-{{CLUSTER_ID}}-sid"
+iam_user_arn_prefix_mvi  = "arn:aws:iam::{{ACCOUNT_ID}}:user/massaas-cos-{{MAS_INSTANCE_ID}}-{{CLUSTER_ID}}-sid"
+s3_iam_users_list_mvi = {
+    logs_rw = {
+        iam_user_name = "massaas-cos-{{ MAS_INSTANCE_ID }}-{{ CLUSTER_ID }}-sid-logs-rw"
+    }
+}
+#S3 MVI related params ends
+{%- endif %}
 
 #S3 related params ends
 {%- endif %}
