--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-variables.tf.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-variables.tf.j2
@@ -39,15 +39,6 @@ variable "name_prefix" {
 
 {%- if IS_S3 | lower == 'true'%}
 
-
-
-variable "s3_iam_users_list_manage" {
-    description = "s3 user list"
-        type = map(object({
-        iam_user_name = string
-    }))
-}
-
 variable "access_level_rw" {
     type        = string
     description = "read and write"
@@ -62,6 +53,12 @@ variable "access_level_ro" {
 
 
 {%- if S3_MANAGE | lower == 'true'%}
+variable "s3_iam_users_list_manage" {
+    description = "s3 user list"
+        type = map(object({
+        iam_user_name = string
+    }))
+}
 variable "s3bucket_name_prefix_manage" {
     type        = string
     description = "s3 bucket name prefix"
@@ -75,6 +72,27 @@ variable "iam_user_arn_prefix_manage" {
     description = "iam user arn"
 }
 {%- endif %}
+{%- if S3_MVI | lower == 'true'%}
+variable "s3_iam_users_list_mvi" {
+    description = "s3 user list"
+        type = map(object({
+        iam_user_name = string
+    }))
+}
+variable "s3bucket_name_prefix_mvi" {
+    type        = string
+    description = "s3 bucket name prefix"
+}
+variable "iam_user_name_prefix_mvi" {
+    type        = string
+    description = "iam user name prefix"
+}
+variable "iam_user_arn_prefix_mvi" {
+    type        = string
+    description = "iam user arn"
+}
+{%- endif %}
+
 {%- endif %}
 {%- if (IS_S3 | lower == 'true') or (IS_RDS | lower == 'true')%}
 variable "s3_encryption_algorithm" {
