mvi support - updated account policy, provider.tf, accesspoint

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-s3accesspoints.tf.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-iac-s3accesspoints.tf.j2
@@ -1,5 +1,5 @@
 resource "time_sleep" "wait_for_iam_{{APP_NAME}}" {
-  depends_on = [module.account_policy]
+  depends_on = [module.account_policy_{{APP_NAME}}]
   create_duration = "60s"
 }
 
