set catalog channel for tenant

--- a/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aiservice-tenant.yaml.j2
+++ b/image/cli/mascli/templates/gitops/appset-configs/cluster/instance/ibm-aiservice-tenant.yaml.j2
@@ -5,6 +5,8 @@ ibm_aiservice_tenant:
   tenant_id: "{{ TENANT_ID }}"
   aiservice_namespace: "{{ AISERVICE_NAMESPACE }}"
   aiservice_instance_id: "{{ AISERVICE_INSTANCE_ID }}"
+  aiservice_channel: "{{ AISERVICE_CHANNEL }}"
+  mas_catalog_source: "{{ MAS_CATALOG_SOURCE }}"
   tenantNamespace: "{{ TENANT_NAMESPACE }}"
 
   mas_icr_cp: "{{ MAS_ICR_CP }}"
